<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome_message">Welcome to ALC 4.0</string>
    <string name="about">ABOUT ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="title_activity_about">About ALC</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="profile_name">SALMI SAMIR</string>
    <string name="profile_track">Track :  Android</string>
    <string name="profile_country">Country :  Morocco</string>
    <string name="profile_email">Email :  information.age2019@gmail.com</string>
    <string name="profile_phone">Phone Number :  +2120637624170</string>
    <string name="photo">photo</string>
</resources>
